--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,6 +7,7 @@ author_profile: true
 
 {% include base_path %}
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+## CS4750 - Introduction to Robotics
+**Teaching Assistant** | Cornell University | Fall 2025
+
+CS4750 is an introductory robotics course covering ROS programming, robot simulation, and Python for robotics applications. As a TA, I help students with ROS environment setup, debugging ROS nodes, and understanding robot simulation tools.
